--- a/view/index.html
+++ b/view/index.html
@@ -23,9 +23,9 @@
 					<div class="jumbotron" id="question">
 						<p id="question_description">Вставьте слово, которое означало бы то же, что и слова, стоящие вне скобок.</p>
 						<form class="form-inline" role="form">
-							<div id="question_text">ТКАНЬ (<input class="form-control" style="width:100px;">) СОСТОЯНИЕ ВЕЩЕСТВА</div>
+							<div id="question_text"><!--ТКАНЬ (<input class="form-control" style="width:100px;">) СОСТОЯНИЕ ВЕЩЕСТВА--></div>
 							<div class="text-right">
-								<input type="button" class="btn btn-info" id="next_question" value="Дальше">
+								<button class="btn btn-info" id="next_question">Дальше</button>
 							</div>
 						</form>
 					</div> <!-- /jumbotron -->
